<resources>
    <string name="app_name">AssessmentDesignInterfaces</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_personal_informations">Informações Pessoais</string>
    <string name="menu_education">Formação</string>
    <string name="menu_professional_xp">Experiência Profissional</string>
    <string name="menu_courses">Cursos</string>
    <string name="menu_publications">Publicações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>